# ChangeLog for app-emulation/e-uae
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  20 Jan 2009; Michał Ziąbkowski <mziab@o2.pl>
  -e-uae-0.8.29_pre20080113.ebuild, -e-uae-0.8.29_pre20080820.ebuild,
  +e-uae-0.8.29_p20080820.ebuild:
  Changed versioning scheme. Removed cruft.

  28 Aug 2008; Michał Ziąbkowski <mziab@o2.pl>
  +e-uae-0.8.29_pre20080820.ebuild:
  Bumped.

  13 Aug 2008; Piotr Szymaniak <lazy_bum@o2.pl>
  e-uae-0.8.29_pre20080113.ebuild:
  Fixed header.
