@@ -1,3 +1,4 @@
 DIST e-uae-0.8.29-20080820.tar.bz2 1115799 RMD160 aa57feb5005a54daa4a2bc104a21e875e5600af5 SHA1 c7d045a9afa5129377d8d3068b8fa97d0a396247 SHA256 2659972bdd2daf568b533558a029d87c48815ce20eba93187acbf5235953d11c
-EBUILD e-uae-0.8.29_p20080820.ebuild 4119 RMD160 219cae398059a4e75e369a803efdb66a195ea6b8 SHA1 92a785d407162dee326b25103d0592869cb2e473 SHA256 73f542c173bbf8a096561484243917eee13bc4eb37bb55d8a0072daee118abe6
-MISC ChangeLog 514 RMD160 36bcf247600136986c29d29490402a04b755005c SHA1 cc1a5b9b2105d798813177ba49a99b36b62bb000 SHA256 d61237995cfacc89066af2fd97c4d4399ef48444404b4101b936b0f2aaa3a934
+EBUILD e-uae-0.8.29_p20080820.ebuild 4115 RMD160 981a8e00d4c4088b0ac78bd0842e8d399bcf36ec SHA1 21765dc893d21fa7ae337ff2a4fe23482815cd42 SHA256 b6ffb0c6b6e76dd72ac25d62d6f3272a67687c8ea1b02ab1caa38ed681795ddc
+MISC ChangeLog 647 RMD160 65d32ea9f75b0fa91feb57c4c2636fb2776bdbaf SHA1 75ee3c96643bed0e2fa69d149a5f50e3dc293e4d SHA256 f9f97afdca0a89638b5b767df951c6deae73067b5a0be595b5e7d0585641d2bf
+MISC metadata.xml 405 RMD160 f7cbafee88b66d412fb06b8a2a444e5db084ab79 SHA1 3565d659caed48f44779b2bd9d1273443649f456 SHA256 bb42d5ca00b31c186808b5656d29104d16d95830c768e8d712609a1e66c3ac3b
