@@ -1,0 +1,14 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
+<pkgmetadata>
+	<herd></herd>
+	<maintainer>
+		<email>mziab@o2.pl</email>
+		<name>Michał Ziąbkowski</name>
+	</maintainer>
+	<use>
+		<flag name='capslib'>Add CAPS library support</flag>
+		<flag name='sdl-sound'>Use <pkg>media-libs/sdl-sound</pkg> for audio
+			output</flag>
+	</use>
+</pkgmetadata>
