@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  21 Jan 2009; Michał Ziąbkowski <mziab@o2.pl>
+  e-uae-0.8.29_p20080820.ebuild, +metadata.xml:
+  Added metadata.xml. Removed -j1.
+
   20 Jan 2009; Michał Ziąbkowski <mziab@o2.pl>
   -e-uae-0.8.29_pre20080113.ebuild, -e-uae-0.8.29_pre20080820.ebuild,
   +e-uae-0.8.29_p20080820.ebuild:
